Fix lang selector background on Safari for iOS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -298,6 +298,8 @@ select.iOS {
         }
         .sidebar-footer {
             .lang-selector {
+                background: $bg-color;
+
                 * {
                     font-size: x-large;
                 }
